# rust-demo

./: README.md
app/: Cargo.toml
app/src/: jsight.rs  main.rs  my-api-spec.jst
docker/: docker-compose.yml
lib/1.0.0/linux/amd64/: libjsight.h
