[package]
name = "rust-demo"
version = "0.1.0"
edition = "2021"
authors = ["JSight, Inc. https://jsight.io"]

[dependencies]
libc = "0.2"
libloading = "0.8"
once_cell = "1.17"
hyper = { version = "1.0.0-rc.3", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1.0-rc.2"
chrono = "0.4"
http = "0.2"